# ColAndreas-open.mp

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build-and-publish.yml  build.yml
lib/pawn/: amx_exports.h  amxplugin.cpp
src/: CMakeLists.txt  ColAndreas.cpp  ColAndreas.h  natives_table.cpp  natives_table.h  openmp_component.cpp  openmp_component.h
